--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -115,7 +115,7 @@ body[data-state="break"]>section>.neznaika{
   animation: 6s 1 normal ease-out .5s leave;
 }
 
-body[data-state="break"] #turbosnail,body[data-state="welcome"] #turbosnail,body[data-state="loader"] #turbosnail,body[data-state="inbreak"] #turbosnail{
+body[data-state="break"] #turbosnail,body[data-state="welcome"] #turbosnail,body[data-state="loader"] #turbosnail,body[data-state="inbreak"] #turbosnail,body[data-state="goodbye"] #turbosnail{
   display: none;
 }
 
@@ -1001,7 +1001,7 @@ bottom: 12.48dvh;
 
 @media screen and (min-width: 1025px) and (max-width: 1199px) {
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: clamp(22px,26px,32px);
@@ -1034,7 +1034,7 @@ bottom: 12.48dvh;
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: clamp(16px,20px,22px);
@@ -1051,7 +1051,7 @@ bottom: 12.48dvh;
 @media screen and (width: 768px) {
 /* @media screen and (width: 768px) and (height: 576px) { */
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: 16px;
@@ -1066,7 +1066,7 @@ bottom: 12.48dvh;
 }
 @media screen and (min-width: 426px) and (max-width: 767px) {
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: clamp(9px,12px,16px);
@@ -1083,7 +1083,7 @@ bottom: 12.48dvh;
 @media screen and (width: 425px) {
 /* @media screen and (width: 425px) and (height: 318px) { */
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: 9px;
@@ -1098,7 +1098,7 @@ bottom: 12.48dvh;
 }
 @media screen and (min-width: 376px) and (max-width: 424px) {
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: 9px;
@@ -1115,7 +1115,7 @@ bottom: 12.48dvh;
 @media screen and (max-width: 375px) {
 /* @media screen and (width: 375px) and (height: 281px) { */
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: 9px;
@@ -1130,7 +1130,7 @@ bottom: 12.48dvh;
 }
 @media screen and (min-width: 320px) and (max-width: 375px) {
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: clamp(7px,8px,9px);
@@ -1146,7 +1146,7 @@ bottom: 12.48dvh;
 @media screen and (width: 320px) {
 /* @media screen and (width: 320px) and (height: 240px) { */
   section#city>div>div.book{
-    padding: 1em 1em 4em 1em;
+    padding: 0 0 4em 0;
     }
   div.book> p {
     font-size: 7px;
