--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -93,7 +93,7 @@ body[data-state="inbreak"] section#city>div:has(div.book){
 }
 
 
-body:not([data-state="loader"])>section#city,body:not([data-state="break"])>section#city{
+body:not(:is([data-state="loader"],[data-state="inbreak"])) section#city{
   display: flex;
 }
 body[data-state="loader"] section#city>div:has(div.book){
@@ -604,7 +604,7 @@ button#go {
   margin: auto;
   justify-content: center;
   align-items: center;
-  font-family: 'Racama-Regular';
+  font-family: 'NT Somic';
   color: var(--color-white, #FFFFFF);
   background-color: var(--color-rose, #BD1622);
   border: 1px solid var(--color-rose, #BD1622);
